manifests/base/vaultwarden/deploy-vaultwarden.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  selector:
    matchLabels:
      app: vaultwarden
  replicas: 1
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: vaultwarden
          image: vaultwarden
          resources:
            requests:
              cpu: 20m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 800Mi
          volumeMounts:
            - name: vaultwarden-data
              mountPath: /data
          ports:
            - containerPort: 80
        - name: bitwarden-cli
          image: bitwarden-cli
          resources:
            requests:
              cpu: 20m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /usr/local/share/ca-certificates/ca.crt
              name: domain-tls
              subPath: ca.crt
          securityContext:
            runAsUser: 28087
            runAsGroup: 28087
          ports:
            - name: http
              containerPort: 8087
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /livenessProbe.sh
            initialDelaySeconds: 30
            failureThreshold: 3
            timeoutSeconds: 10
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: 8087
            initialDelaySeconds: 60
            failureThreshold: 3
            timeoutSeconds: 2
            periodSeconds: 20
          startupProbe:
            tcpSocket:
              port: 8087
            initialDelaySeconds: 120
            failureThreshold: 3
            timeoutSeconds: 2
            periodSeconds: 30
      volumes:
        - name: vaultwarden-data
          persistentVolumeClaim:
            claimName: vaultwarden-data
        - name: domain-tls
          secret: 
            secretName: domain-tls
