manifests/base/vaultwarden/ingressroute-vaultwarden.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: <VAULTWARDEN_MATCH>
      observability:
        accessLogs: true
        metrics: true
      services:
        - name: vaultwarden
          namespace: vaultwarden
          port: 80
  tls:
    secretName: domain-tls
    domains:
      - main: <VAULTWARDEN_DOMAIN>
